2007-01-04  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 4395: Specified key was too long; max key length is 1000 bytes
 * Fixed bug 4528: Deprecated function in documentation

2006-10-13  Dmitry Dulepov  <dmitry@typo3.org>

 * enableDomainLookup and rootPageID is removed from manual.sxw because they do not exist
 * Added TS log message in case if root page cannot be determined from configuration

2006-10-06  Dmitry Dulepov  <dmitry@typo3.org>

 * Release of RealURL 1.1.3

2006-10-06  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed compatibility issue for wrong realurl configuration (see bug #4352)
 * Updated class/function index

2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>

 * Release of RealURL 1.1.2

2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>

 * Added patch by Andreas Otto (field order and sorting in mod1 for Redirect view)
 * Fixed bug 1530: defaultToHTMLsuffixOnPrev has to be cleaned in decodeSpURL
 * Fixed bug 2439: [RealURL] Prepend domain name before path in realurl modules
 * Fixed bug 3441: Real url's with .html without using defaultToHTMLsuffixOnPrev
 * Fixed bug 3988: /start/Feedback gets not found because of uppercase; searchTitle_searchPid() return does not use "encoded" version in lookup

2006-10-03  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug #3517: Impossible to have same path on 2 domains

2006-09-07  Dmitry Dulepov  <typo3@accio.lv>

 * Release of RealURL 1.1.1

2006-08-28  Dmitry Dulepov  <typo3@accio.lv>

 * Fixed bug #3078: realurl doesn't take config.typolinkLinkAccessRestrictedPages into account

2006-08-25  Dmitry Dulepov  <typo3@accio.lv>

 * bk_realurl02 was too large

2006-08-17  Dmitry Dulepov  <typo3@accio.lv>

 * Made a workaround for error in parse_url() when parsing multiple arrays

2006-02-16  Dmitry Dulepov  <typo3@accio.lv>

 * Updated compatibility version

2006-01-29  Dmitry Dulepov  <typo3@accio.lv>

 * Fixed repeated message in EM to drop/add bk_realurl02 index

2006-01-27  Dmitry Dulepov  <typo3@accio.lv>
